Cherry-pick r283322. rdar://problem/83954555

Web Audio panner node quality deteriorates over time
    https://bugs.webkit.org/show_bug.cgi?id=230950
    <rdar://problem/83675934>

    Reviewed by Eric Carlson.

    When profiling the test case, I noticed what we were spending most of the CPU time
    under AudioParamTimeline::valuesForFrameRangeImpl() / isEventCurrent() called from
    PannerNode::process(). The reason for that is that the number of events in the
    AudioParamTimeline would keep growing unboundedly and it would make the
    valuesForFrameRangeImpl() implementation more and more expensive over time, since
    it has to iterate over all events.

    To address the issue, valuesForFrameRangeImpl() now keeps track of the events
    that it had to skip because they were in the past. Then, at the end of the loop,
    it removes the outdated events so it won't have to iterate over them the next
    time around. This behavior is similar to what Blink does.

    * Modules/webaudio/AudioParamTimeline.cpp:
    (WebCore::AudioParamTimeline::removeOldEvents):
    (WebCore::AudioParamTimeline::valuesForFrameRangeImpl):
    * Modules/webaudio/AudioParamTimeline.h:

    Canonical link: https://commits.webkit.org/242347@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283322 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/240672.188@safari-612-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-612-branch@283790 268f45cc-cd09-0410-ab3c-d52691b4dbfc